crates/atlas-runtime/tests/snapshots/operator_precedence_modern__precedence_and_before_or.snap
---
source: crates/atlas-runtime/tests/operator_precedence_modern.rs
expression: "program.items[0]"
---
Statement:
  Expr:
    expr:
      Binary:
        op: Or
        left:
          Literal:
            - Bool: false
            - start: 0
              end: 5
        right:
          Binary:
            op: And
            left:
              Literal:
                - Bool: true
                - start: 9
                  end: 13
            right:
              Literal:
                - Bool: false
                - start: 17
                  end: 22
            span:
              start: 9
              end: 22
        span:
          start: 0
          end: 22
    span:
      start: 0
      end: 23
