crates/atlas-runtime/tests/snapshots/operator_precedence_modern__precedence_array_index_in_arithmetic.snap
---
source: crates/atlas-runtime/tests/operator_precedence_modern.rs
expression: "program.items[0]"
---
Statement:
  Expr:
    expr:
      Binary:
        op: Add
        left:
          Index:
            target:
              Identifier:
                name: arr
                span:
                  start: 0
                  end: 3
            index:
              Literal:
                - Number: 0
                - start: 4
                  end: 5
            span:
              start: 0
              end: 6
        right:
          Binary:
            op: Mul
            left:
              Literal:
                - Number: 2
                - start: 9
                  end: 10
            right:
              Literal:
                - Number: 3
                - start: 13
                  end: 14
            span:
              start: 9
              end: 14
        span:
          start: 0
          end: 14
    span:
      start: 0
      end: 15
