crates/atlas-runtime/tests/snapshots/operator_precedence_modern__precedence_complex_arithmetic.snap
---
source: crates/atlas-runtime/tests/operator_precedence_modern.rs
expression: "program.items[0]"
---
Statement:
  Expr:
    expr:
      Binary:
        op: Sub
        left:
          Binary:
            op: Add
            left:
              Literal:
                - Number: 1
                - start: 0
                  end: 1
            right:
              Binary:
                op: Mul
                left:
                  Literal:
                    - Number: 2
                    - start: 4
                      end: 5
                right:
                  Literal:
                    - Number: 3
                    - start: 8
                      end: 9
                span:
                  start: 4
                  end: 9
            span:
              start: 0
              end: 9
        right:
          Binary:
            op: Div
            left:
              Literal:
                - Number: 4
                - start: 12
                  end: 13
            right:
              Literal:
                - Number: 2
                - start: 16
                  end: 17
            span:
              start: 12
              end: 17
        span:
          start: 0
          end: 17
    span:
      start: 0
      end: 18
