crates/atlas-runtime/tests/snapshots/operator_precedence_modern__precedence_complex_logical.snap
---
source: crates/atlas-runtime/tests/operator_precedence_modern.rs
expression: "program.items[0]"
---
Statement:
  Expr:
    expr:
      Binary:
        op: Or
        left:
          Binary:
            op: And
            left:
              Literal:
                - Bool: true
                - start: 0
                  end: 4
            right:
              Literal:
                - Bool: false
                - start: 8
                  end: 13
            span:
              start: 0
              end: 13
        right:
          Unary:
            op: Not
            expr:
              Literal:
                - Bool: true
                - start: 18
                  end: 22
            span:
              start: 17
              end: 22
        span:
          start: 0
          end: 22
    span:
      start: 0
      end: 23
